plang/testing/logs/false-incorrect/76/program76.p.p
eKLHC Y xyVYx o9f.

fJ4lR W (Jfhny).


d :- apIU, x U5 (OXuQ); rmO c; ai9Fu (rHf t (N5U) (KJ9U4)) gDdH; (w1 (Ni) qUWc, u6 (qZyz (UsVu) (Qwo) (jd3y))), ((z4Q DE7F3 (ADjJ) Fez, vmauh r6)), l (XG6b) Io ZHx (tJzJ wL4qW), c (QaP) (Yxbe); m (qQiT (cMLw (mBGTP zUIPm (g FI (qd))))) (Yn8YU); (pp8xX (JpZgs) (IebYz) D3NJK NjBv); vn (z) f9; u a; ez8 h1U bD1z (bo (H)).


z nz.

w5 jsO39 (KPAS) Lsa.

wTbo (R4uH) Hy :- ((h UXOb kewe (vH) O), fl, iHUwl NiH (FE8s) S (e)), (a5ZmL rXy (mM (gLPf C (mee)) (ru6 (J) Otz) co9) (r3he (RpBQ) (y (S) (My) (X) (L1)))), d0Oms (O) M pVD erL.
e6utc YwG (X0VpX) To1G :- xvuRL.
dNdAC i0 (La18) ZE0 D :- ((bI (V4) Lz PZ t; o5iuP OAXV KS), (b (j (Y6lEs) D (Z) yz5) (T) (oO3Fy (az Ihn (w LVeVl (P1Xt0) S (H))) (q8 (x7dO (Co4kR) (y8Ai (g21S (pfP) Bcboy))) (B1) (PQkMo))); f UC oD)), rfqyr (z0aG (tyK (FD) Lj) (VKWl) (W) (Mk)) (B), l93YQ (h (eLGn (iTyH4 (a P spH (PTlhK)) qGRM Q2hSB B96qC)) ENfp vNk86 TiZ) gBdD L3U T, jNWrg (To) (w810r (P7) (S9b) (mpbI (P) wLv52 Gsz97 (h Mr gg ESkiU (Qm2))) UjPg), kuJ s, dx1 (iLxwU) (Lo), tgfHz OAW2, dgTOZ (Kkr), wgTf (Rt) (N) qBU (T9), tG (YK) (u (VZquV)) S; kf6z (V) (TsLn) Z4K; gz5jv wu (FQU5n).


h1r Io4d :- (vWT), ((wbl (Gv) (AxP) (Qk4b9) (IKQ))); bbOQp Tlovt MaP (M) (x (H9tn)), (n4B0g (aOD (e (jKQi (H9gS) JA2J (AWUYO) f8v) (YMs) (R) (Ex5)) Gdx (X6L)) Q, agqKq Pt JQ f; lS oaAp2); (xGO (WBdlQ) I sO HJB; xN4jm (h951X (gu) (iNJ q38 (wBG5G)) ygw2C (C2TEa)) (n66 KVh) la0dZ (dJl (vC7AN (oWEr (kg2 (sUL5 j) (Fc)) J (v4Ut (t) iTBiO yj (yb)) xqdD) (sbbA (So) (pUKj) (YQ)) nU) TqwF4 (nPbO3 (Bw) (Rkml) (Hd8W5) ENx2s) (kDB (Zfz) (VL) (va4o (I) (H) (CZvqc)))); ih0 (RO) eneV (s), aLkT (IXg) gS).

o ZsIWS :- (jaHE), (vyd d wBxWm QWlq OzAr, m (mTAm AF37R OP4 (Eh) (MbH)) (Ea) (A)), t v2Ek.

yuL.

xsJv.

? (b1YG9 (M); bXH Xk (LA7L) (R) (t Y9f); v (hGpZ eOA wAq9 (l (fq8 (J) l6y c) (Rt) (qG (b5 (K) FZF ub (fWU (m) (U6Bl))) (mWH (Zng) Mht (A0nP) (A)) t (EbIDZ)) yyM) q) tDF z1BA2; ((t7289 I A))), p (pb Gt CWz) (leG (q1C41 AT GF (UD) (vhVo (alDIe VX4H))) (sNEM) (PQh) v) (R) (OQh).

